--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -8,7 +8,7 @@
     <% if !@project.nil? %>
       <%= form_with(model: @project, url: "/projects/#{@project.project_id}", local: true) do |f| %>
         <div class="form-group subtitle">
-          <table class="table table-bordered table-striped table-hover">
+          <table class="table table-bordered table-striped table-hover sales_form">
             <tr>
               <th>受注額</th>
               <th>予算(見積もり工数 × 単価)</th>
@@ -25,32 +25,39 @@
         </div>
       <% end %>
       <hr>
-      <%= form_with(url: "/projects/#{@project.project_id}/create_outsourcing", method: :post, local: true) do |f| %>
         <div class="form-group subtitle">
-          <table class="table table-bordered table-striped table-hover">
+          <table class="table table-bordered table-striped table-hover outsource_form">
             <tr>
               <th>外注費</th>
               <th>名前</th>
               <th>説明</th>
               <th></th>
             </tr>
-            <% @outsourcing_info.each do |p| %>
-              <tr>
-                <td><%= f.number_field :cost, value: p.cost %></td>
-                <td><%= f.text_field :name, value: p.name %></td>
-                <td><%= f.text_field :description, value: p.description %></td>
-                <td><%= link_to '削除', "/projects/#{@project.project_id}/delete_outsourcing", method: :delete, data: { confirm: "「#{p.cost}万円」のレコードを削除します" }, class: 'btn btn-danger' %> </td>
+            <% @outsourcing_info.each do |outsourcing| %>
+              <%= form_with(url: update_outsourcing_project_path, model: outsourcing, method: :patch, local: true) do |f| %>
+                <tr>
+                  <%= f.hidden_field :id, value: outsourcing.id %>
+                  <td><%= f.number_field :cost, value: outsourcing.cost %></td>
+                  <td><%= f.text_field :name, value: outsourcing.name %></td>
+                  <td><%= f.text_field :description, value: outsourcing.description %></td>
+                  <td>
+                    <%= f.submit '更新', class: 'btn btn-primary'%>
+                    <%= link_to '削除', delete_outsourcing_project_path(outsourcing_cost: { id: outsourcing.id }), method: :delete, data: { confirm: "「#{outsourcing.cost}万円」のレコードを削除します" }, class: 'btn btn-danger' %> 
+                  </td>
               </tr>
+              <% end %>
             <% end %>
+            <%= form_with(url: create_outsourcing_project_path, method: :post, local: true) do |f| %>
             <tr>
+              <%= f.hidden_field :project_id, value: @project.project_id %>
               <td><%= f.number_field :cost %></td>
               <td><%= f.text_field :name %></td>
               <td><%= f.text_field :description %></td>
               <td><%= f.submit '更新', class: 'btn btn-primary'%></td>
             </tr>
+            <% end %>
           </table>
         </div>
-      <% end %>
     <% else %>
     <hr>
     <h2>
@@ -194,7 +201,7 @@
       バージョン
     </h2>
     <% if @versions.present? %>
-      <table class="table table-striped">
+      <table class="table table-striped version_form">
         <tr>
           <th>バージョン</th>
           <th>締め日</th>
